[package]
name = "API_GH_manual"
version = "0.1.0"
edition = "2021"

# Optional: Add a description and authors
description = "A program to take screenshots of websites and upload them to GitHub issues."
authors = ["Spirillen spirillen@danwin1210.de"]
license = "AGPL-3"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
fantasy = "0.1.0"
csv = "1.3.1"  # Replace with the latest version of the fantasy crate
